--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main>
-      <div class="container">
+      <div class="container mt-5">
         <%= yield %>
       </div>    
     </main> 
